got score panel centered need to fix spacing

--- a/css/mem.css
+++ b/css/mem.css
@@ -7,12 +7,26 @@
 .title {
     text-align: center;
     font-weight: bolder;
-    color: turquoise;
+    color: rgb(15, 126, 115);
+    font-size:50px
 }
 body {
-    height: 100vh;
-    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background: rgb(75, 13, 100);
+
+    /*height: 100vh;
+    display: flex;
+    background: rgb(75, 13, 100);*/
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction:column;
 }
 
 .memory-game {
@@ -67,7 +81,7 @@ body {
 .scoreheader {
     text-align: left;
     width: 350;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 .scoreheader .stars {
@@ -79,14 +93,26 @@ body {
 .scoreheader .stars li{
     list-style: none;
     display: inline-block;
-}
-
-.scoreheader .restart {
-    float:right;
-    cursor: pointer;
-}
-
-.stars {
     color: yellow;
 }
 
+.scoreheader .reset {
+    float:right;
+    cursor: pointer;
+    
+}
+
+.scoreheader .moves {
+font-size: 30px;
+color:wheat;
+}
+.scoreheader .timer {
+    font-size: 30px;
+    color:white;
+}
+
+/*Modal*/
+
+.hide {
+    display:none;
+}
